# xphrase

./: README.md  pyproject.toml
xphrase/: main.py
